--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+- 0.1.6:
+  - 로그 객체 향상
+    - utf-8 인코딩으로 파일 저장
+    - 필드별 타입 지정
+    - 인자 없는 생성자 지원
 - 0.1.5:
   - 로그 객체 reset 기능
   - domain 요소에 version 정보 추가
