--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
+- 0.1.8:
+  - C# 로그 객체에서 문자열 Escape 처리 
 - 0.1.7:
-  - 로그 객체에서 datetime 타입 버그 수정
+  - C# 로그 객체에서 datetime 타입 버그 수정
 - 0.1.6:
   - 로그 객체 향상
     - utf-8 인코딩으로 파일 저장
